fjord-compiler/test/errors/uniqueness/UnusedLetBind.fj
module errors.UnusedLetBind

unusedX : Int
unusedX = 
  let x = 1 in 0
